Book/Univer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-go-app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-go-app
  template:
    metadata:
      labels:
        app: my-go-app
    spec:
      containers:
      - name: my-go-app-container
        image: bogdum/my-go-app:v1.0.1.1
        ports:
        - containerPort: 8080 # Порт, на котором работает приложение внутри контейнера
