Book/Univer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-go-app-service
spec:
  type: NodePort
  selector:
    app: my-go-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    #nodePort: 30001
